hermes_fuzz_executed/fuzz_65_execution
'use strict';
let a = {};
a.foo = function a() {
    return 1 + 2;
};
a.toString = function a() {
    return '';  
};
a;
```



Execution Output ------------------:
test.js:12:1: error: non-terminated template literal

^
test.js:10:3: note: template literal started here
```
  ^
test.js:12:1: error: invalid expression

^
